Fix everywhere whitespace in docs.

--- a/docgen/styles.css
+++ b/docgen/styles.css
@@ -95,6 +95,6 @@ table th, table td {
     padding: 10px 20px;
 }
 
-#module > header > p {
+p {
     max-width: 600px;
 }
